2007-Aug-27  Heikki Junnila <hjunnila@users.sf.net>
	* Got rid of the QInputDialog in BusProperties dialog and
	  switched to QListViewItem renaming.
	* Editing the name of a bus will do Doc::setModified()

2007-Aug-27  Heikki Junnila <hjunnila@users.sf.net>
	* Implemented support for generic fixtures so we don't have to
	  create fixture definitions for simple dimmers.
	* Added function type column to chaser & collection editors.
	* Replaced some remaining "device" texts with "fixture"

2007-Aug-26  Heikki Junnila <hjunnila@users.sf.net>
	* Renamed dce directory to fixtureeditor

2007-Aug-26  Heikki Junnila <hjunnila@users.sf.net>
	* Once again: HUUUGE commit
	* Workspace background is changed thru workspace context menu
	* Changed file format for workspaces completely to XML
	  -> TODO: .qlc -> .qxf converter
	* Replaced Device class with Fixture class
	* Replaced all strings speaking of "device" to "fixture".
	* TODO: Virtualconsole doesn't get saved/loaded yet...

2007-Jun-03  Heikki Junnila <hjunnila@users.sf.net>
	* Removed uic_editpresetvalue.cpp from dce/Makefile.am

2007-May-28  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed lots of crash problems with fixture editor

2007-May-26  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed QLCCapability::operator=() to return *this
	* Fixed QLCFixtureMode::channelNumber() to return KChannelInvalid
	  instead of -1 for errors.
	* Changed xpm/Makefile to gfx/Makefile in configure.ac.

2007-May-26  Heikki Junnila <hjunnila@users.sf.net>
	* Re-added graphics under gfx

2007-May-26  Heikki Junnila <hjunnila@users.sf.net>
	* Removed broken (during migration) xpm directory

2007-May-26  Heikki Junnila <hjunnila@users.sf.net>
	* Migrated all code from CVS to SVN
	* Added config dir to root

2007-May-26  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed dce's save as to actually save the file
	* Fixed qlcchannel's saveXML to write group stuff correctly

2007-May-21  Heikki Junnila <hjunnila@users.sf.net>